[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/optionMenu.gd" type="Script" id=1]

[node name="optionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 850.0
custom_constants/separation = 5

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 14.0
text = "Options"
align = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 500.0
margin_bottom = 33.0
text = " Music Volume"
align = 1

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 500.0
margin_bottom = 54.0
min_value = -80.0
max_value = 0.0
step = 10.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 500.0
margin_bottom = 73.0
text = " Sound effect Volume"
align = 1

[node name="HSlider2" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 500.0
margin_bottom = 94.0
min_value = -80.0
max_value = 0.0
step = 10.0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 99.0
margin_right = 500.0
margin_bottom = 119.0
text = "Back to Main Menu"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
